--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> ბენგ & ოლუფსენ</title>
-	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 	<header>
-		<a href="./index.html"><img src="./assets/images/logo-header.png" class="logo-header" alt="logo"></a>
+		<a href="./index.html"><img src="assets/images/logo-header.png" class="logo-header" alt="logo"></a>
 		
 	<nav id="menu" >
 		
@@ -37,24 +37,24 @@
 			<button>დამატება</button>
 		</section>
 
-			<a href="./headphone.html"><img src="./assets/images/rectangle 39.png" alt="ყურსასმენი" class="main-picture"></a>
+			<a href="./headphone.html"><img src="assets/images/rectangle 39.png" alt="ყურსასმენი" class="main-picture"></a>
 
 	</div>
 
 	<div class="second-section">
 			<ul>
 				<li>
-					<img src="./assets/images/group 5.png" class="small-pic">
+					<img src="assets/images/group 5.png" class="small-pic">
 					<p>მონიტორი</p>
 					<div class="min-box"></div>
 				</li>
 				<li>
-					<img src="./assets/images/group61.png" class="small-pic">
+					<img src="assets/images/group61.png" class="small-pic">
 					<p>სანათი</p>
 					<div class="min-box"></div>
 				</li>
 				<li>
-					<img src="./assets/images/group 7.png" class="small-pic">
+					<img src="assets/images/group 7.png" class="small-pic">
 					<p>ყურსასმენი</p>
 					<div class="min-box"></div>
 				</li>
@@ -66,7 +66,7 @@
 		<h1>ყველაზე გაყიდვადი</h1>
 		<ul class="product-list">
 			<li class="items">
-				<a href="./headphone.html"><img src="./assets/images/group 9.png" alt="სანათი"></a>
+				<a href="./headphone.html"><img src="assets/images/group 9.png" alt="სანათი"></a>
 				<a href="./headphone.html"><h2>სანათი</h2></a>
 				<p>უმაღლესი ხარისხის სანათი</p>
 				<div class="conteiner">
