--- a/headphone.html
+++ b/headphone.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> ბენგ & ოლუფსენ</title>
-	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
+	<link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
 </head>
 <body>
 		<header>
@@ -94,7 +94,7 @@
 		
 
 	</footer>
-<script type="text/javascript" src="./assets/JS/script.js"></script>
+<script type="text/javascript" src="assets/JS/script.js"></script>
 
 </body>
 </html>
