--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 	<div class="second-section">
 			<ul>
 				<li>
-					<img src="/assets/images/group5.png" class="small-pic">
+					<img src="assets/images/group61.png" class="small-pic">
 					<p>მონიტორი</p>
 					<div class="min-box"></div>
 				</li>
